--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "path": "^0.12.7"
+    "mysql2": "^3.9.7",
+    "path": "^0.12.7",
+    "uuid": "^9.0.1"
   }
 }
