--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.7",
+    "node": "^22.3.0",
     "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
